--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="GenereativeAI Chatbot || Federal Bank"
+      content="GenereativeAI Chatbot || IFFCO"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>GenereativeAI Chatbot || Federal Bank</title>
+    <title>GenereativeAI Chatbot || IFFCO</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
